--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>rede socias</title>
+    <title>Redes Sociais </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Relatorio da redes sociais</h1>
-    <nav>
-        <a href="index.html">Mundo</a>
-        <a href="#">minha escola</a>
-    </nav>
-  </header>  
-  <main class="graficos-section">
-    <section id="grafico-container"  class="grafico-container">
-   <!--crie os graficos aqui-->
-    </section>
-  </main>
-  <footer>
-   <p>Desenvolvido por Gui Lima</p> 
+    <header>
+        <h1> Relatorio das Redes Sociais</h1>
+        <nav>
+            <a href="index.html">Mundo</a>
+            <a href="#">Minha Escola</a>
+        </nav>
+    </header>
+        <main class="graficos-section">
+            <section id="graficos-container" class="graficos-container"></section>
+    </main>
+    <footer>
+        <p>Desenvolvido por Gui Lima
+        </p>
     </footer>
 </body>
 </html>
