--- a/rede-sociais-main/index.html
+++ b/rede-sociais-main/index.html
@@ -24,5 +24,6 @@
         <p>Desenvolvido por Gui Lima</p>
     </footer>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
+    <script type="module" scr="graficos/quantidadeUsoarios.js"></script>
 </body>
 </html>
